# Calculator

./: Cargo.toml  README.md
assets/: calc.desktop
src/: lib.rs  main.rs
